[package]
name = "rsmc-tokio"
description = "An async memcached client for Tokio"
version = "0.1.0"
authors = ["Creston Bunch <rust@bunch.im>"]
edition = "2018"

categories = ["api-bindings", "caching", "database"]
license = "MIT"
keywords = ["memcache", "memcached", "async", "tokio"]
repository = "https://github.com/crestonbunch/rsmc"

[dependencies]
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.2", features = ["full"] }
rsmc-core = "0.1.0"

[dev-dependencies]
flate2 = "1.0"
tokio-test = "0.4"
rand = "0.8"