[package]
name = "rsmc-tokio"
description = "An async memcached client for Tokio"
version = "0.1.0"
authors = ["Creston Bunch <rust@bunch.im>"]
edition = "2018"

categories = ["api-bindings", "caching", "database"]
license = "MIT"
keywords = ["memcache", "memcached", "async", "tokio"]
repository = "https://github.com/crestonbunch/rsmc"

[features]
default = ["zlib"]
zlib = ["rsmc-core/zlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
rsmc-core = { version = "0.1.0", default-features = false }
tokio = { version = "1.2", features = ["full"] }

[dev-dependencies]
flate2 = "1.0"
tokio-test = "0.4"
rand = "0.8"